--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "three": "^0.154.0",
+    "three": "^0.155.0",
     "three-inspect": "^0.3.4",
-    "trzy": "^0.0.54"
+    "trzy": "^0.3.8"
   },
   "devDependencies": {
-    "@types/three": "^0.152.1",
+    "@types/three": "^0.155.0",
+    "three-mesh-bvh": "^0.6.3",
     "typescript": "^5.1.6",
-    "vite": "^4.3.9"
+    "vite": "^4.4.9"
   },
   "repository": {
     "type": "git",
